<resources>
    <string name="app_name">Bon Appetit</string>
    <string name="app_name_first_part">B</string>
    <string name="app_name_second_part">n</string>
    <string name="app_name_third_part">Appetit</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_is_not_registered">It seems that it is your first visit..\n please sign up first</string>
    <string name="login">Let\'s go to the Kitchen</string>
    <string name="signup">First Visit</string>
    <string name="fragment_tag_login">login fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_email">Not a valid Email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="name">"Name "</string>
    <string name="desc">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="precautions">Precautions</string>
    <string name="image">Image</string>
    <string name="image_btn">Upload</string>
    <string name="table_users_key" translatable="false">users</string>
    <string name="table_users_name_key" translatable="false">name</string>
    <string name="table_users_address_key" translatable="false">address</string>
    <string name="table_users_phone_key" translatable="false">phone</string>
    <string name="table_users_email_key" translatable="false">email</string>
    <string name="title_activity_meals">MealsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_poultry">Poultry</string>
    <string name="menu_meat">Meat</string>
    <string name="menu_vege">Vegetarian</string>

    <string name="home_second">Home Second</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="create_account">Create Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_admin_activityy">AdminActivityy</string>
    <string name="user_image_chooser_title">Select source</string>
    <string name="permission_camera_denied_rationale">Camera needed to take photo</string>
    <string name="permission_denied_message">Permission needed</string>
    <string name="enable">Enable</string>
    <string name="user_table">users</string>
    <string name="user">user</string>
    <string name="registeration_successful">Successful registeration</string>
    <string name="registeration_failed">"Registeration failed "</string>
    <string name="action_logout">Logout</string>
    <string name="menu_add_meal">Add meal</string>
    <string name="menu_add_Category">Add Category</string>
    <string name="Add_meal">Save meal</string>
    <string name="dialog_fragment_title">Add Category</string>
    <string name="save">Save</string>
    <string name="firebase_store_meals_photos" translatable="false">MealsPhotos/</string>
    <string name="firebase_store_user_photos" translatable="false">UsersPhotos/</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="calories">Calories</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="cart">Cart</string>
    <string-array name="categories">
        <item>Poultry</item>
        <item>Meat</item>
        <item>Dessert</item>
        <item>Pasta</item>
        <item>Fish</item>
        <item>Vegetarian</item>
    </string-array>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_maps">Map</string>
    <string name="your_location">Your Location</string>
    <string name="add_location">Add Location</string>
    <string name="save_location">Save Location</string>
    <string name="location_saved">Location Saved</string>
    <string name="gps_alert_msg">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="total">Total:</string>
    <string name="meal_key" translatable="false">meal</string>
    <string name="notification_msg">Are you ready For a yummy meal</string>
    <string name="notification_title">Pamper your tummy</string>
    <string name="go_to_cart">Cart</string>
    <string name="submit_order">Submit order</string>
    <string name="meal_image">image of meal</string>
    <string name="app_logo">Application logo</string>
    <string name="add_to_cart">add meal to cart</string>
    <string name="widget_title">Your order details : </string>
    <string name="user_key" translatable="false">loggedin_user</string>
    <string name="user_name_err">User Name Should not be less than 4 Chars</string>
    <string name="key_location" translatable="false">location</string>
    <string name="registering">Registering... please wait</string>
    <string name="shared_pref">shared pref</string>
    <string name="key_orders_shared_pref">key orders for widget</string>
    <string name="key_total_shared_pref">total price</string>
    <string name="save_meal_success">success</string>
    <string name="key_meal" translatable="false">meal</string>
    <string name="pound">\" L.E.\"</string>
    <string name="jpeg">JPEG_</string>
    <string name="key_camera_position">camera_position</string>
    <string name="no_orders">No Orders</string>
    <string name="quantity_of_order_content_description">Quantity of order</string>
    <string name="meal_image_content_description">"Meal "</string>

</resources>
